<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:text="@string/greeting" />

    <Toolbar
        android:id="@+id/toolbar"
        android:title="@string/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/display"
        android:background="@android:color/holo_blue_bright" >
        <TextView
            android:id="@+id/toolbar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texview_in_toolbar"
            android:layout_gravity="center" />
    </Toolbar>

</RelativeLayout>
